# src/controllers/funcionarioController.js
@@ -1,10 +1,15 @@
-import { PRISMA } from "../services/index.js"
+import { PRISMA } from "../services/index.js";
+import bcrypt from "bcrypt";
+import jwt from "jsonwebtoken";
 
 async function buscar() {
     try {
         return await PRISMA.funcionario.findMany({
             orderBy: {
                 id: "asc"
+            },
+            include: {
+                cargo: true
             }
         });
     } catch (error) {
@@ -17,6 +22,9 @@ async function buscar() {
 
 async function criar(dados) {
     try {
+        let senhaCriptografada = await bcrypt.hash(dados.senha, 10);
+        dados.senha = senhaCriptografada;
+
         const request = await PRISMA.funcionario.create({
             data: dados
         });
@@ -44,6 +52,9 @@ async function criar(dados) {
 
 async function editar(dados) {
     try {
+        let senhaCriptografada = await bcrypt.hash(dados.senha, 10);
+        dados.senha = senhaCriptografada;
+
         const request = await PRISMA.funcionario.update({
             where: {
                 id: Number(dados.id)
@@ -101,9 +112,46 @@ async function deletar(id) {
     }
 }
 
+async function logar(dados) {
+    try {
+        const funcionario = await PRISMA.funcionario.findFirst({
+            where: {
+                email: dados.email
+            }
+        });
+
+        if (!funcionario) {
+            return {
+                tipo: "warning",
+                mensagem: "Email ou senha incorretos"
+            }
+        }
+
+        let senhaOk = await bcrypt.compare(dados.senha, funcionario.senha);
+
+        if (senhaOk) {
+            let token = await jwt.sign(funcionario, process.env.SEGREDO, { expiresIn: "1h"});
+            delete funcionario.senha;
+            return { token, funcionario }
+        }
+
+        return {
+            tipo: "warning",
+            mensagem: "Email ou senha incorretos"
+        }
+
+    } catch (error) {
+        return {
+            tipo: "error",
+            mensagem: `Error: ${error.message}`
+        }
+    }
+}
+
 export {
     buscar,
     criar,
     editar,
-    deletar
+    deletar,
+    logar
 }
